# gmra-vis

./: oldColormap.h
configs/: gene1-scaled-3tissues.config  gene1-scaled.config  gene1.config
src/: .#TreeDEL.h  .Data.h.swp  .MultiscaleProjectionDEL.h.swp  CMakeCache.txt  CMakeLists.txt  Color.h  ColorDefines.h  ColorLegendDEL.h  ColorMap.h  ColorMapFactories.h  CreateIPCATree.cxx  Data.h  Display.h  DisplayElement.h  DoubleRotation.h  GMRAVis.h  GMRAVisCmdLine.cpp  GlutStrokeFont.h  MultiscaleProjectionDEL.h  ParallelDEL.h  PatchDEL.h  ProjectionDEL.h  Rotation.h  SinglePatchDEL.h  SinglePatchReconstructDEL.h  SunBurstTreeDel.h  TreeDEL.h  Vector.h  ZoomTreeDEL.h  colormapper.h  etc.h
src/config/: MyConfig.h
src/lib/: .GMRAMultiscaleTransport.h.swp  .IPCATree.h.swp  AxisAlignedTree.h  FindFTGL.cmake  GMRAMultiscaleTransport.h  GMRANeighborhood.h  GMRATree.h  IPCATree.h  Linalg.h  LinalgIO.h  NodeDistance.h  RelativeGMRANeighborhood.h  WassersteinNodeDistance.h
